Fonts Css Modified

--- a/CSS/Css Part 2/Fonts.html
+++ b/CSS/Css Part 2/Fonts.html
@@ -11,6 +11,8 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae explicabo, quia expedita voluptate unde consequuntur minima commodi architecto, alias sunt delectus porro et obcaecati magnam placeat ullam magni corporis autem?</p>
 
+    <p class="one">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium eum non sequi at nobis quidem consequuntur eos explicabo culpa corporis mollitia aliquid distinctio dicta beatae placeat error, quos dolor praesentium?</p>
+    
     <p id="fonts">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero incidunt eligendi perspiciatis sed deserunt magni similique illum, minima iure doloremque rerum repudiandae atque doloribus illo libero obcaecati. Quis, soluta porro!</p>
 </body>
 </html>
