Mini Landing Project Completed

--- a/Project/Project.html
+++ b/Project/Project.html
@@ -19,10 +19,12 @@
     <p class="Header1">Stay Tuned for our Upcoming Projects</p>
     <br>
     <p class="Header1">Sign up for our Upcoming launch!</p>
-    <form>
+    <form class="emailform" action="ThankYouP.html" method="post">
         <label for="Name">Name:</label>
         <input type="text" name="" placeholder="First Name"><br>
-        <input id = "sub" type="button" value="Submit">
+        <label for="email">Email</label>
+        <input type="email" name="" id=""><br>
+        <input id = "sub" type="submit" value="Submit">
     </form>
     </center>
 </body>
