--- a/BootStrap/Bootstrap.html
+++ b/BootStrap/Bootstrap.html
@@ -9,11 +9,6 @@
 </head>
 <body>
     <!-- <h1>Bootstrap</h1> -->
-    <div class="container">
-        <h2>Hello World!</h2>
-        <button type="button" class="btn btn-outline-info">Info</button>
-        <button type="button" class="btn btn-outline-info btn-lg">Info</button>
-    </div>
     <div class="p-5 mb-4 bg-light rounded-3">
         <div class="container-fluid py-5">
           <h1 class="display-5 fw-bold">Sharvesh R</h1>
@@ -23,6 +18,27 @@
           </p>
           <a href="https://www.linkedin.com/in/rsharvesh16"><button class="btn btn-primary btn-lg" type="submit">LinkedIn</button></a>
         </div>
+    </div>
+    <!-- <div>
+      <h2>Fill the details below to get frequent updates.. Or get the newsletter..:)</h2>
+    </div> -->
+    <div class="container">
+      <form>
+      <div class="mb-3">
+        <label for="exampleInputEmail1" class="form-label">Email address</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
       </div>
+      <div class="mb-3">
+        <label for="exampleInputPassword1" class="form-label">Password</label>
+        <input type="password" class="form-control" id="exampleInputPassword1">
+      </div>
+      <div class="mb-3 form-check">
+        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+        <label class="form-check-label" for="exampleCheck1">Check me out</label>
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+    </div>
 </body>
 </html>
