--- a/BootStrap/Bootstrap.html
+++ b/BootStrap/Bootstrap.html
@@ -42,13 +42,13 @@
       <div class="container">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img width="20px" height="500" src="me1.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="me2.jpg" class="d-block w-100" alt="...">
+          <img width="auto" height="auto" src="me1.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
           <img src="me1.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="img.jpg" class="d-block w-100" alt="...">
         </div>
       </div>
     </div>
